# c-qupid

./: CMakeLists.txt  README.md  c-qupid.code-workspace  rootlogon.C
exe/: CMakeLists.txt
include/: QPDigitizerBase.hpp  QPDigitizerSquare.hpp  QPGeneral.hpp  QPGraphFactory.hpp  QPMath.hpp  QPMatrix.hpp  QPMonteCarlo.hpp  QPPixel.hpp  QPPixelBase.hpp  QPSignalBase.hpp  QPSignalGaussian.hpp  QPVector.hpp
src/: QPDigitizerBase.cpp  QPDigitizerSquare.cpp  QPGraphFactory.cpp  QPMath.cpp  QPMatrix.cpp  QPPixel.cpp  QPPixelBase.cpp  QPSignalBase.cpp  QPSignalGaussian.cpp  QPVector.cpp
test/: CMakeLists.txt  test0_VectorMatrix.cxx  test1_spanGaussian.cxx  test2_gaussianSignal.cxx  test3_digitizer.cxx  test4_graphfactory.cxx
